[package]
name = "codec2"
version = "0.3.0"
description = "A pure-Rust implementation of the Codec2 low-bitrate speech compression codec"
authors = ["David Rowe", "Matt Weeks <scriptjunkie@scriptjunkie.us>"]
license = "LGPL-2.1-only AND MIT"
edition = "2018"
repository = "https://github.com/scriptjunkie/codec2"
keywords = ["audio", "speech", "compression", "codec"]
categories = ["compression", "multimedia::audio", "multimedia::encoding", "algorithms"]
readme = "README.md"

[dependencies]
micromath = "2.1.0"

[dev-dependencies]
zerocopy = "0.3.0"

[features]
micromath = []
